--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -38,6 +38,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/produits}" th:classappend="${activeMenu == 'produits'} ? 'active' : ''">
+                            <i class="fas fa-jar me-1"></i>Produits
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/commandes}" th:classappend="${activeMenu == 'commandes'} ? 'active' : ''">
                             <i class="fas fa-shopping-cart me-1"></i>Commandes
                         </a>
