--- a/src/main/resources/templates/commandes/list.html
+++ b/src/main/resources/templates/commandes/list.html
@@ -12,7 +12,7 @@
         <!-- Page Header -->
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1><i class="fas fa-shopping-cart me-2"></i>Commandes</h1>
-            <a th:href="@{/commandes/nouveau}" class="btn btn-success">
+            <a th:href="@{/commandes/nouvelle}" class="btn btn-success">
                 <i class="fas fa-plus me-1"></i>Nouvelle Commande
             </a>
         </div>
