--- a/src/main/resources/templates/orders/form.html
+++ b/src/main/resources/templates/orders/form.html
@@ -157,8 +157,9 @@
                                             </td>
                                             <td class="text-center">
                                                 <button type="button" class="btn btn-sm btn-outline-danger remove-ligne-btn"
-                                                        onclick="removeLine(this)" title="Supprimer">
-                                                    <i class="fas fa-trash"></i>
+                                                        onclick="removeLine(this)" title="Supprimer"
+                                                        aria-label="Supprimer la ligne">
+                                                    <i class="fas fa-trash" aria-hidden="true"></i>
                                                 </button>
                                             </td>
                                         </tr>
